# serum-rust

./: Cargo.toml  README.md
example/: Cargo.toml  key_1.json  key_2.json  key_3.json  key_4.json  markets.json  markets_dev.json
example/src/: main.rs
serum_api/: Cargo.toml
serum_api/src/: client.rs  helpers.rs  lib.rs  market.rs
