[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serum_api = { path = "../serum_api" }
solana-sdk = "1.7.12"
solana-client = "1.7.10"
anyhow = "1.0.43"
rust_decimal = "1.16"
rust_decimal_macros = "1.16"
serum_dex = "0.4.0"
futures = "0.3"

tokio = {version = "1.12.0", features = ["full"] }
thread-id = "4.0.0"
# features = ["attributes"]