[package]
name = "serum_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoffset = "0.6.4"
solana-account-decoder = "1.8.0"
solana-program = "1.6.18"
solana-client = "1.7.10"
solana-sdk = "1.7.12"
serum_dex = "0.4.0"
safe-transmute = "0.11.0"
anyhow = { version = "1.0", default-features = false }
rand = "0.7.3"
spl-token = { version = "3.0.0-pre1", features = ["no-entrypoint"], default-features = false }
clap = "3.0.0-beta.1"
warp = "0.2"
sloggers = "1.0"
slog-scope = "4.3"
slog-stdlog = "4"
debug_print = "1.0.0"
enumflags2 = "0.6.4"
log = "0.4"
rust_decimal = "1.16"
rust_decimal_macros = "1.16"
threadpool = "1.8.1"
serde = "1.0.130"
bs58 = "0.4.0"
bincode = "1.3.3"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
byteorder = "1.4.3"
futures = "0.3"
thread-id = "4.0.0"
tokio = {version = "1.12.0", features = ["full"] }
parking_lot = "0.11.2"

solana-client-helpers = "1.0.0"
bytemuck = "1.7.2"

